--- a/circuit2.lyx
+++ b/circuit2.lyx
@@ -85,44 +85,32 @@ Fixpunktlogik
 \end_layout
 
 \begin_layout Definition
-Die relationale Fixpunktlogik 
+Die Logik
 \begin_inset Formula $\mathrm{FP}\left[\sigma\right]$
 \end_inset
 
  ist rekursiv wie folgt definiert:
 \end_layout
 
-\begin_layout Definition
-Entsprechend den Regeln der Logik 
-\begin_inset Formula $\mbox{FO}\left[\sigma\right]$
-\end_inset
-
-:
-\end_layout
-
 \begin_deeper
 \begin_layout Itemize
-Für jedes Relationssymbol 
+Für jedes Relationssymbol
 \begin_inset Formula $R\in\sigma$
 \end_inset
 
- und jedes Tupel 
+ und jedes Tupel
 \begin_inset Formula $\bar{x}\in Var^{\mathrm{ar}\left(R\right)}$
 \end_inset
 
- ist 
-\begin_inset Formula $R\bar{x}$
+ ist
+\begin_inset Formula $R\bar{x}\in\mathrm{FP}\left[\sigma\right]$
 \end_inset
 
- eine 
-\begin_inset Formula $\mathrm{FP}\left[\sigma\right]$
-\end_inset
-
--Formel, und 
+, und
 \begin_inset Formula $\left\llbracket R\bar{x}\right\rrbracket \left(\mathfrak{A},\beta\right)=1$
 \end_inset
 
- genau dann wenn 
+ genau dann wenn
 \begin_inset Formula $\beta\bar{x}\in R^{\mathfrak{A}}$
 \end_inset
 
@@ -130,183 +118,97 @@ Für jedes Relationssymbol
 \end_layout
 
 \begin_layout Itemize
-Für zwei 
-\begin_inset Formula $\mathrm{FP}\left[\sigma\right]$
+Für zwei Formeln
+\begin_inset Formula $\psi_{1},\psi_{2}\in\mathrm{FP}\left[\sigma\right]$
 \end_inset
 
--Formeln 
-\begin_inset Formula $\varphi_{1},\varphi_{2}$
-\end_inset
-
- und einen Junktor 
+ und
 \begin_inset Formula $\gamma\in\left\{ \wedge,\vee,\rightarrow,\leftrightarrow\right\} $
 \end_inset
 
- sei auch 
-\begin_inset Formula $\left(\varphi_{1}\gamma\varphi_{2}\right)$
+ sei auch
+\begin_inset Formula $\left(\psi_{1}\gamma\psi_{2}\right)\in\mathrm{FP}\left[\sigma\right]$
 \end_inset
 
- eine 
-\begin_inset Formula $\mathrm{FP}\left[\sigma\right]$
-\end_inset
-
--Formel, und 
-\begin_inset Formula $\left\llbracket \left(\varphi_{1}\gamma\varphi_{2}\right)\right\rrbracket \left(\mathfrak{A},\beta\right)$
+, und
+\begin_inset Formula $\left\llbracket \left(\psi_{1}\gamma\psi_{2}\right)\right\rrbracket \left(\mathfrak{A},\beta\right)$
 \end_inset
 
  sei entsprechend den Booleschen Junktoren definiert.
 \end_layout
 
 \begin_layout Itemize
-Für jede 
-\begin_inset Formula $\mathrm{FP}\left[\sigma\right]$
+Für jede Formel
+\begin_inset Formula $\psi\in\mathrm{FP}\left[\sigma\right]$
 \end_inset
 
--Formel 
-\begin_inset Formula $\varphi$
+ sei
+\begin_inset Formula $\neg\psi\in\mathrm{FP}\left[\sigma\right]$
 \end_inset
 
- sei 
-\begin_inset Formula $\neg\varphi$
-\end_inset
-
- eine 
-\begin_inset Formula $\mathrm{FP}\left[\sigma\right]$
-\end_inset
-
--Formel, und 
-\begin_inset Formula $\left\llbracket \neg\varphi\right\rrbracket \left(\mathfrak{A},\beta\right)=1-\left\llbracket \varphi\right\rrbracket \left(\mathfrak{A},\beta\right)$
+, und
+\begin_inset Formula $\left\llbracket \neg\psi\right\rrbracket \left(\mathfrak{A},\beta\right)=1-\left\llbracket \psi\right\rrbracket \left(\mathfrak{A},\beta\right)$
 \end_inset
 
 .
 \end_layout
 
 \begin_layout Itemize
-Für jeden Quantor 
+Für jeden Quantor
 \begin_inset Formula $Q\in\left\{ \exists,\forall\right\} $
 \end_inset
 
-, jede Variable 
+, jede Variable
 \begin_inset Formula $x\in Var$
 \end_inset
 
- und jede 
-\begin_inset Formula $\mathrm{FP}\left[\sigma\right]$
+ und jede Formel
+\begin_inset Formula $\psi\in\mathrm{FP}\left[\sigma\right]$
 \end_inset
 
--Formel 
-\begin_inset Formula $\varphi$
+ sei
+\begin_inset Formula $Qx\psi\in\mathrm{FP}\left[\sigma\right]$
 \end_inset
 
- sei 
-\begin_inset Formula $Qx\varphi$
+.
+ Es gelte
+\begin_inset Formula $\left\llbracket \exists x\psi\right\rrbracket \left(\mathfrak{A},\beta\right)=1$
 \end_inset
 
- eine 
-\begin_inset Formula $\mathrm{FP}\left[\sigma\right]$
-\end_inset
-
--Formel.
- Es gelte 
-\begin_inset Formula $\left\llbracket \exists x\varphi\right\rrbracket \left(\mathfrak{A},\beta\right)=1$
-\end_inset
-
- genau dann wenn ein 
+ genau dann wenn ein
 \begin_inset Formula $a\in A$
 \end_inset
 
- existiert, so dass 
-\begin_inset Formula $\left\llbracket \varphi\right\rrbracket \left(\mathfrak{A},\beta\frac{a}{x}\right)=1$
+ existiert, so dass
+\begin_inset Formula $\left\llbracket \psi\right\rrbracket \left(\mathfrak{A},\beta\frac{a}{x}\right)=1$
 \end_inset
 
-, und es gelte 
-\begin_inset Formula $\left\llbracket \forall x\varphi\right\rrbracket \left(\mathfrak{A},\beta\right)=\left\llbracket \neg\exists x\neg\varphi\right\rrbracket \left(\mathfrak{A},\beta\right)$
+, und es gelte
+\begin_inset Formula $\left\llbracket \forall x\psi\right\rrbracket \left(\mathfrak{A},\beta\right)=\left\llbracket \neg\exists x\neg\psi\right\rrbracket \left(\mathfrak{A},\beta\right)$
 \end_inset
 
 .
 \end_layout
 
-\end_deeper
-\begin_layout Standard
-Zusätzlich wird der inflationäre Fixpunkt-Operator definiert:
-\end_layout
-
+\begin_deeper
 \begin_layout Itemize
-Für ein beliebiges 
-\begin_inset Formula $k$
+Für ein beliebiges Relationssymbol
+\begin_inset Formula $R'\notin\sigma$
 \end_inset
 
--stelliges Relationssymbol 
-\begin_inset Formula $R\notin\sigma$
+ und jede Formel
+\begin_inset Formula $\psi\in\mathrm{FP}\left[\sigma\cup\left\{ R'\right\} \right]$
 \end_inset
 
-, eine 
-\begin_inset Formula $k$
+ sei
+\begin_inset Formula $\mathrm{ifp}_{R'}\left[\psi\right]\left(\bar{x}\right)\in\mathrm{FP}\left[\sigma\right]$
 \end_inset
 
--stellige Formel 
-\begin_inset Formula $\varphi\left(\bar{x}\right)\in\mathrm{FP}\left[\sigma\cup\left\{ R\right\} \right]$
-\end_inset
-
- und ein Tupel 
-\begin_inset Formula $\bar{t}\in Var^{k}$
-\end_inset
-
- ist 
-\begin_inset Formula $\left[\mathrm{ifp}_{R,\bar{x}}\varphi\right]\left(\bar{t}\right)$
-\end_inset
-
- eine 
-\begin_inset Formula $\mathrm{FP}\left[\sigma\right]$
-\end_inset
-
--Formel.
+, und es gelte [...]
 \end_layout
 
-\begin_layout Standard
-Zum Beispiel:
-\begin_inset Formula 
-\[
-\varphi\left(u,v\right)\coloneqq\left[\mathrm{ifp}_{R,\left(x,y\right)}\,E\left(x,y\right)\vee\exists z\,\left(E\left(x,z\right)\wedge R\left(z,y\right)\right)\right]\left(u,v\right)
-\]
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
-Die Auswertung 
-\begin_inset Formula $\left\llbracket \left[\mathrm{ifp}_{R,\bar{x}}\varphi\right]\left(\bar{t}\right)\right\rrbracket \left(\mathfrak{A},\beta\right)$
-\end_inset
-
- sei der Fixpunkt der folgenden Sequenz 
-\begin_inset Formula $\left(R^{i}\right)_{i\geqslant0}$
-\end_inset
-
-:
-\end_layout
-
-\begin_layout Standard
-\begin_inset Formula 
-\begin{eqnarray*}
-R^{0} & = & \emptyset\\
-R^{m+1} & = & R^{m}\cup\left\llbracket \varphi\right\rrbracket \left(\mathfrak{A}\cup R^{m}\right)
-\end{eqnarray*}
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
-(Offensichtlich wird ein solcher Fixpunkt nach höchstens 
-\begin_inset Formula $\left|A\right|^{k}$
-\end_inset
-
- Iterationen erreicht.)
-\end_layout
-
+\end_deeper
+\end_deeper
 \begin_layout Subsection
 Schaltkreise
 \end_layout
@@ -316,40 +218,41 @@ Schaltkreise
 \series bold
 Basis:
 \series default
- 
+
 \end_layout
 
 \begin_layout Standard
-Eine boolesche Basis 
+Eine boolesche Basis
 \begin_inset Formula $\mathbb{B}$
 \end_inset
 
- besteht aus beliebigen symmetrischen Funktionen 
+ besteht aus beliebigen symmetrischen Funktionen
 \begin_inset Formula $\phi:\left\{ 0,1\right\} ^{*}\rightarrow\left\{ 0,1\right\} $
 \end_inset
 
-, die hier als 
+, die o.b.d.A.
+ als
 \begin_inset Formula $\phi:\mathbb{N}\times\mathbb{N}\rightarrow\left\{ 0,1\right\} $
 \end_inset
 
  abgekürzt werden.
- Ein Gatter vom Typ 
+ Ein Gatter von Typ
 \begin_inset Formula $\phi$
 \end_inset
 
- hat den Wert 
+ hat den Wert
 \begin_inset Formula $\phi\left(n,m\right)$
 \end_inset
 
-, wenn es genau 
+, wenn es genau
 \begin_inset Formula $n$
 \end_inset
 
- Vorgänger besitzt, von denen 
+ Vorgänger besitzt, von denen
 \begin_inset Formula $m$
 \end_inset
 
- den Wert 
+ den Wert
 \begin_inset Formula $1$
 \end_inset
 
@@ -357,8 +260,8 @@ Eine boolesche Basis
 \begin_inset Newline newline
 \end_inset
 
-Zum Beispiel entsprechen UND und ODER den folgenden Funktionen: 
-\begin_inset Formula 
+Zum Beispiel entsprechen UND und ODER den folgenden Funktionen:
+\begin_inset Formula
 \begin{eqnarray*}
 \wedge\left(n,m\right) & \coloneqq & \begin{cases}
 1 & \mathrm{falls}\,n=m\\
@@ -382,32 +285,32 @@ Schaltkreis
 \end_layout
 
 \begin_layout Standard
-Sei 
+Sei
 \begin_inset Formula $\mathbb{B}$
 \end_inset
 
- eine Basis und 
+ eine Basis und
 \begin_inset Formula $\sigma$
 \end_inset
 
  eine relationale Signatur.
- Ein 
+ Ein
 \begin_inset Formula $\left(\mathbb{B},\sigma\right)$
 \end_inset
 
--Schaltkreis 
+-Schaltkreis
 \begin_inset Formula $\mathcal{C}\coloneqq\left(V,E,\Sigma,\Omega,U\right)$
 \end_inset
 
- mit einer Stelligkeit 
+ mit einer Stelligkeit
 \begin_inset Formula $\mathrm{ar}\left(C\right)\coloneqq m$
 \end_inset
 
- besteht aus den folgenden Komponenten: 
+ besteht aus den folgenden Komponenten:
 \end_layout
 
 \begin_layout Enumerate
-Ein azyklischer Graph 
+Ein azyklischer Graph
 \begin_inset Formula $\left(V,E\right)$
 \end_inset
 
@@ -415,7 +318,7 @@ Ein azyklischer Graph
 \end_layout
 
 \begin_layout Enumerate
-eine Gattermarkierung 
+eine Gattermarkierung
 \begin_inset Formula $\Sigma:V\rightarrow\mathbb{B}\cup\left\{ \mathbf{0},\mathbf{1}\right\} \cup\left\{ R\bar{x},\neg R\bar{x}\mid R\in\sigma,\bar{x}\in U^{\mathrm{ar}\left(R\right)}\right\} $
 \end_inset
 
@@ -423,23 +326,23 @@ eine Gattermarkierung
 \end_layout
 
 \begin_layout Enumerate
-eine Ausgabefunktion 
+eine Ausgabefunktion
 \begin_inset Formula $\Omega:U^{m}\rightarrow V$
 \end_inset
 
- (für 
+ (für
 \begin_inset Formula $m=0$
 \end_inset
 
- ist 
+ ist
 \begin_inset Formula $\Omega\left(\left\langle \right\rangle \right)\in V$
 \end_inset
 
- eine Konstante) und 
+ eine Konstante) und
 \end_layout
 
 \begin_layout Enumerate
-ein geordnetes Universum 
+ein Universum
 \begin_inset Formula $U\coloneqq\left\{ 1,\cdots,n\right\} $
 \end_inset
 
@@ -453,36 +356,32 @@ Auswertung von Schaltkreisen
 \end_layout
 
 \begin_layout Standard
-Der Schaltkreis 
+Der Schaltkreis
 \begin_inset Formula $\mathcal{C}$
 \end_inset
 
- wird über einer 
+ wird über einer
 \begin_inset Formula $\sigma$
 \end_inset
 
--Struktur 
+-Struktur
 \begin_inset Formula $\mathfrak{A}$
 \end_inset
 
- mit dem Universum 
+ mit dem Universum
 \begin_inset Formula $U$
 \end_inset
 
  ausgewertet.
- Die Auswertung ist eine Abbildung 
+ Die Auswertung ist eine Abbildung
 \begin_inset Formula $\mathcal{C}\left[\mathfrak{A}\right]:V\rightarrow\left\{ 0,1\right\} $
 \end_inset
 
-, die jedem Gatter 
-\begin_inset Formula $v\in V$
-\end_inset
-
- den Wert 
+, die jedem Gatter den Wert
 \begin_inset Formula $0$
 \end_inset
 
- oder 
+ oder
 \begin_inset Formula $1$
 \end_inset
 
@@ -490,23 +389,23 @@ Der Schaltkreis
 \end_layout
 
 \begin_layout Enumerate
-Falls das Eingangsgatter 
+Falls das Eingangsgatter
 \begin_inset Formula $v$
 \end_inset
 
- mit einem Literal 
+ mit einem Literal
 \begin_inset Formula $\Sigma\left(v\right)=R\bar{x}$
 \end_inset
 
- markiert ist, so ist 
+ markiert ist, so ist
 \begin_inset Formula $\mathcal{C}\left[\mathfrak{A}\right]\left(v\right)=1$
 \end_inset
 
- genau dann wenn 
+ genau dann wenn
 \begin_inset Formula $\bar{x}\in R^{\mathfrak{A}}$
 \end_inset
 
-, und sonst 
+, und sonst
 \begin_inset Formula $0$
 \end_inset
 
@@ -514,19 +413,19 @@ Falls das Eingangsgatter
 \end_layout
 
 \begin_layout Enumerate
-Für ein negiertes Literal 
+Für ein negiertes Literal
 \begin_inset Formula $\Sigma\left(v\right)=\neg R\bar{x}$
 \end_inset
 
- ist 
+ ist
 \begin_inset Formula $\mathcal{C}\left[\mathfrak{A}\right]\left(v\right)=1$
 \end_inset
 
- genau dann wenn 
+ genau dann wenn
 \begin_inset Formula $\bar{x}\notin R^{\mathfrak{A}}$
 \end_inset
 
-, und sonst 
+, und sonst
 \begin_inset Formula $0$
 \end_inset
 
@@ -534,23 +433,23 @@ Für ein negiertes Literal
 \end_layout
 
 \begin_layout Enumerate
-Für ein inneres Gatter mit dem Symbol
+Für ein inneres Gatter mit
 \begin_inset Formula $\Sigma\left(v\right)=\phi\in\mathbb{B}$
 \end_inset
 
- ist 
+ ist
 \begin_inset Formula $\mathcal{C}\left[\mathfrak{A}\right]\left(v\right)=\phi\left(i,j\right)$
 \end_inset
 
-, wobei 
+, wobei
 \begin_inset Formula $i$
 \end_inset
 
- der Eingangsgrad von 
+ der Eingangsgrad von
 \begin_inset Formula $v$
 \end_inset
 
- und 
+ und
 \begin_inset Formula $j=\sum_{\left(u,v\right)\in E}\mathcal{C}\left[\mathfrak{A}\right]\left(u\right)$
 \end_inset
 
@@ -558,38 +457,43 @@ Für ein inneres Gatter mit dem Symbol
 \end_layout
 
 \begin_layout Standard
-Ein Tupel 
+Ein Tupel
 \begin_inset Formula $\bar{x}\in U^{m}$
 \end_inset
 
- erfüllt den Schaltkreis 
+ erfüllt den Schaltkreis
 \begin_inset Formula $\mathcal{C}$
 \end_inset
 
- genau dann wenn das Gatter 
+ genau dann wenn das Gatter
 \begin_inset Formula $\Omega\left(\bar{x}\right)$
 \end_inset
 
- den Wert 
+ den Wert
 \begin_inset Formula $\mathcal{C}\left[\mathfrak{A}\right]\left(\Omega\left(\bar{x}\right)\right)=1$
 \end_inset
 
  hat.
- Dafür führen wir die abgekürzte Notation 
+ Dafür führen wir die abgekürzte Notation
 \begin_inset Formula $\mathcal{C}\left[\mathfrak{A}\right]\left(\bar{x}\right)=1$
 \end_inset
 
- beziehungsweise 
+ bzw.
+
 \begin_inset Formula $\bar{x}\in\mathcal{C}\left[\mathfrak{A}\right]$
 \end_inset
 
  ein.
- Für 0-stellige Schaltkreise schreiben wir 
+ Für
+\begin_inset Formula $\mathrm{ar}\left(\mathcal{C}\right)=0$
+\end_inset
+
+ schreiben wir
 \begin_inset Formula $\mathfrak{A}\models\mathcal{C}$
 \end_inset
 
  bzw.
- 
+
 \begin_inset Formula $\mathcal{C}\left[\mathfrak{A}\right]=1$
 \end_inset
 
@@ -607,68 +511,68 @@ Invarianz
 \end_layout
 
 \begin_layout Standard
-Für eine 
+Für eine
 \begin_inset Formula $\sigma$
 \end_inset
 
--Struktur 
+-Struktur
 \begin_inset Formula $\mathfrak{A}$
 \end_inset
 
- mit beliebigem Universum 
+ mit beliebigem Universum
 \begin_inset Formula $A$
 \end_inset
 
- der Größe 
+ der Größe
 \begin_inset Formula $\left|A\right|=\left|U\right|$
 \end_inset
 
- sei 
+ sei
 \begin_inset Formula $\pi:A\rightarrow U$
 \end_inset
 
- eine Bijektion und 
+ eine Bijektion und
 \begin_inset Formula $\pi\mathfrak{A}$
 \end_inset
 
- die entsprechende isomorphe Struktur mit Universum 
+ die entsprechende isomorphe Struktur mit Universum
 \begin_inset Formula $U$
 \end_inset
 
 .
- Ein Schaltkreis 
+ Ein Schaltkreis
 \begin_inset Formula $\mathcal{C}$
 \end_inset
 
- ist 
+ ist
 \series bold
 invariant
 \series default
- genau dann für alle Tupel 
+ genau dann wenn für alle Tupel
 \begin_inset Formula $\bar{a}\in A^{\mathrm{ar}\left(\mathcal{C}\right)}$
 \end_inset
 
- und alle Bijektionen 
+ und alle Bijektionen
 \begin_inset Formula $\pi_{1},\pi_{2}:A\rightarrow U$
 \end_inset
 
  gilt:
-\begin_inset Formula 
+\begin_inset Formula
 \[
 \mathcal{C}\left[\pi_{1}\mathfrak{A}\right]\left(\pi_{1}\bar{a}\right)=\mathcal{C}\left[\pi_{2}\mathfrak{A}\right]\left(\pi{}_{2}\bar{a}\right)
 \]
 
 \end_inset
 
-Für invariante Schaltkreise bezeichne 
+Für invariante Schaltkreise bezeichne
 \begin_inset Formula $\mathcal{C}\left[\mathfrak{A}\right]$
 \end_inset
 
- die Auswertung 
+ die Auswertung
 \begin_inset Formula $\mathcal{C}\left[\pi\mathfrak{A}\right]$
 \end_inset
 
- mit einer beliebigen Abbildung 
+ mit einer beliebigen Abbildung
 \begin_inset Formula $\pi:A\rightarrow U$
 \end_inset
 
@@ -682,48 +586,48 @@ Symmetrie
 \end_layout
 
 \begin_layout Standard
-Ein Schaltkreis 
+Ein Schaltkreis
 \begin_inset Formula $\mathcal{C}$
 \end_inset
 
- ist 
+ ist
 \series bold
 symmetrisch
 \series default
-, wenn für jede Permutation der Universums 
+, wenn für jede Permutation der Universums
 \begin_inset Formula $\pi:U\rightarrow U$
 \end_inset
 
- ein Automorphismus 
+ ein Automorphismus
 \begin_inset Formula $\hat{\pi}:V\rightarrow V$
 \end_inset
 
- des Graphen 
+ des Graphen
 \begin_inset Formula $\left(V,E\right)$
 \end_inset
 
- existiert, der den Funktionen 
+ existiert, der den Funktionen
 \begin_inset Formula $\Sigma$
 \end_inset
 
- und 
+ und
 \begin_inset Formula $\Omega$
 \end_inset
 
- treu ist:
+ entspricht:
 \end_layout
 
 \begin_layout Enumerate
-Für alle Eingangsgatter 
+Für alle Eingangsgatter
 \begin_inset Formula $v$
 \end_inset
 
- mit 
+ mit
 \begin_inset Formula $\Sigma\left(v\right)=R\bar{x}$
 \end_inset
 
  bzw.
- 
+
 \begin_inset Formula $\Sigma\left(v\right)=\neg R\bar{x}$
 \end_inset
 
@@ -732,15 +636,15 @@ Für alle Eingangsgatter
 \end_inset
 
  bzw.
- 
+
 \begin_inset Formula $\Sigma\left(\hat{\pi}v\right)=\neg R\,\pi\bar{x}$
 \end_inset
 
-.
+
 \end_layout
 
 \begin_layout Enumerate
-Für alle übrigen Gatter gilt 
+Für alle übrigen Gatter gilt
 \begin_inset Formula $\Sigma\left(v\right)=\Sigma\left(\hat{\pi}v\right)$
 \end_inset
 
@@ -748,11 +652,11 @@ Für alle übrigen Gatter gilt
 \end_layout
 
 \begin_layout Enumerate
-Für jedes Tupel 
+Für jedes Tupel
 \begin_inset Formula $\bar{x}\in U$
 \end_inset
 
- gilt 
+ gilt
 \begin_inset Formula $\Omega\left(\pi\bar{x}\right)=\hat{\pi}\Omega\left(x\right)$
 \end_inset
 
@@ -765,41 +669,41 @@ Symmetrie ist eine hinreichende, aber nicht notwendige, Bedingung für die
 \end_layout
 
 \begin_layout Proof
-Sei 
+Sei
 \begin_inset Formula $\mathcal{C}$
 \end_inset
 
- ein symmetrischer Schaltkreis, und 
+ ein symmetrischer Schaltkreis, und
 \begin_inset Formula $\mathfrak{A}$
 \end_inset
 
- eine beliebige Struktur mit 
+ eine beliebige Struktur mit
 \begin_inset Formula $\left|A\right|=\left|U\right|$
 \end_inset
 
 .
- Seien 
+ Seien
 \begin_inset Formula $\pi_{1}$
 \end_inset
 
- und 
+ und
 \begin_inset Formula $\pi_{2}$
 \end_inset
 
- zwei beliebige Bijektionen von 
+ zwei beliebige Bijektionen von
 \begin_inset Formula $A$
 \end_inset
 
- auf 
+ auf
 \begin_inset Formula $U$
 \end_inset
 
 .
- Es ist zu zeigen, dass 
+ Es ist zu zeigen, dass
 \begin_inset Formula $\mathcal{C}\left[\pi_{1}\mathfrak{A}\right]\left(\pi_{1}\bar{a}\right)=\mathcal{C}\left[\pi_{2}\mathfrak{A}\right]\left(\pi_{2}\bar{a}\right)$
 \end_inset
 
- für alle 
+ für alle
 \begin_inset Formula $\bar{a}\in A^{\mathrm{ar}\left(\mathcal{C}\right)}$
 \end_inset
 
@@ -807,15 +711,15 @@ Sei
 \end_layout
 
 \begin_layout Proof
-Sei 
+Sei
 \begin_inset Formula $\tau\coloneqq\pi_{1}\cdot\pi_{2}^{-1}$
 \end_inset
 
- eine Permutation von 
+ eine Permutation von
 \begin_inset Formula $U$
 \end_inset
 
-, so dass 
+, so dass
 \begin_inset Formula $\pi_{1}=\tau\pi_{2}$
 \end_inset
 
@@ -823,28 +727,31 @@ Sei
 \end_layout
 
 \begin_layout Proof
-Per Voraussetzung induziert 
+Per Voraussetzung induziert
 \begin_inset Formula $\tau$
 \end_inset
 
- einen Automorphismus 
+ den Automorphismus
 \begin_inset Formula $\hat{\tau}$
 \end_inset
 
- auf 
+ auf
 \begin_inset Formula $\mathcal{C}$
 \end_inset
 
-: 
-\begin_inset Formula 
-\begin{eqnarray*}
-\Omega\left(\tau\bar{x}\right)=\hat{\tau}\Omega\left(\bar{x}\right) &  & \mbox{für alle \ensuremath{\bar{x}\in U^{\mathrm{ar}\left(\mathcal{C}\right)}}}\\
-\Sigma\left(\hat{\tau}v\right)=\tau\Sigma\left(v\right) &  & \mbox{für alle Eingangsgatter}
-\end{eqnarray*}
-
+, so dass
+\begin_inset Formula $\Omega\left(\tau\bar{x}\right)=\hat{\tau}\Omega\left(\bar{x}\right)$
 \end_inset
 
+ für alle
+\begin_inset Formula $\bar{x}\in U^{\mathrm{ar}\left(\mathcal{C}\right)}$
+\end_inset
 
+, und
+\begin_inset Formula $\Sigma\left(\hat{\tau}v\right)=\tau\Sigma\left(v\right)$
+\end_inset
+
+ für alle Eingangsgatter.
 \end_layout
 
 \begin_layout Proof
@@ -853,7 +760,7 @@ Per Induktion über die Tiefe
 status open
 
 \begin_layout Plain Layout
-Die maximale Länge eines Weges von einem Eingangsgatter zum Gatter 
+Die maximale Länge eines Weges von einem Eingangsgatter zum Gatter
 \begin_inset Formula $v$
 \end_inset
 
@@ -862,15 +769,15 @@ Die maximale Länge eines Weges von einem Eingangsgatter zum Gatter
 
 \end_inset
 
- wird gezeigt: 
-\begin_inset Formula 
-\begin{eqnarray*}
-\mathcal{C}\left[\tau\pi_{2}\mathfrak{A}\right]\left(\hat{\tau}v\right)=\mathcal{C}\left[\pi_{2}\mathfrak{A}\right]\left(v\right) &  & \mbox{für alle \ensuremath{v\in V}}
-\end{eqnarray*}
-
+ wird gezeigt, dass
+\begin_inset Formula $\mathcal{C}\left[\tau\pi_{2}\mathfrak{A}\right]\left(\hat{\tau}u\right)=\mathcal{C}\left[\pi_{2}\mathfrak{A}\right]\left(u\right)$
 \end_inset
 
+ für alle Gatter
+\begin_inset Formula $v\in V$
+\end_inset
 
+ gilt.
 \end_layout
 
 \begin_deeper
@@ -883,38 +790,30 @@ Induktionsanfang
 \begin_inset Formula $n=0$
 \end_inset
 
-: Sei 
+: Sei
 \begin_inset Formula $v\in V$
 \end_inset
 
- ein Eingangsgatter mit 
+ ein Eingangsgatter mit
 \begin_inset Formula $\Sigma\left(u\right)=R\bar{x}$
 \end_inset
 
+; so gilt
+\begin_inset Formula $\Sigma\left(\hat{\tau}v\right)=R\tau\bar{x}$
+\end_inset
+
 .
- Per Definition von 
-\begin_inset Formula $\tau$
+ Offensichtlich gilt
+\begin_inset Formula $\tau\bar{x}\in\tau\pi_{2}R^{\mathfrak{A}}$
 \end_inset
 
- und 
-\begin_inset Formula $\hat{\tau}$
+ genau dann wenn
+\begin_inset Formula $\bar{x}\in\pi_{2}R^{\mathfrak{A}}$
 \end_inset
 
- gilt: 
-\begin_inset Formula 
-\begin{eqnarray*}
- &  & \Sigma\left(\hat{\tau}v\right)=R\tau\bar{x}\\
- &  & \tau\bar{x}\in\tau\pi_{2}R^{\mathfrak{A}}\,\mbox{g.d.w.}\,\bar{x}\in\pi_{2}R^{\mathfrak{A}}
-\end{eqnarray*}
-
-\end_inset
-
-Es folgt: 
-\begin_inset Formula 
-\[
-\mathcal{C}\left[\tau\pi_{2}\mathfrak{A}\right]\left(\hat{\tau}v\right)=\mathcal{C}\left[\pi_{2}\mathfrak{A}\right]\left(v\right)
-\]
-
+.
+ Es folgt
+\begin_inset Formula $\mathcal{C}\left[\tau\pi_{2}\mathfrak{A}\right]\left(\hat{\tau}v\right)=\mathcal{C}\left[\pi_{2}\mathfrak{A}\right]\left(v\right)$
 \end_inset
 
 .
@@ -929,20 +828,20 @@ Induktionsschritt
 \begin_inset Formula $n\mapsto n+1$
 \end_inset
 
-: 
+:
 \end_layout
 
 \begin_deeper
 \begin_layout Description
-Annahme: Für alle Gatter 
+Annahme: Für alle Gatter
 \begin_inset Formula $v\in V$
 \end_inset
 
- mit Tiefe 
+ mit Tiefe
 \begin_inset Formula $\leqslant n$
 \end_inset
 
- gilt 
+ gilt
 \begin_inset Formula $\mathcal{C}\left[\tau\pi_{2}\mathfrak{A}\right]\left(\hat{\tau}u\right)=\mathcal{C}\left[\pi_{2}\mathfrak{A}\right]\left(u\right)$
 \end_inset
 
@@ -950,36 +849,25 @@ Annahme: Für alle Gatter
 \end_layout
 
 \begin_layout Standard
-So gilt für jedes Gatter mit Tiefe 
+So folgt für jedes Gatter mit Tiefe
 \begin_inset Formula $n+1$
 \end_inset
 
-: 
-\end_layout
-
-\begin_layout Enumerate
-Die Beschriftungen 
+: Die Beschriftungen
 \begin_inset Formula $\Sigma\left(\hat{\tau}u\right)=\Sigma\left(u\right)=\phi$
 \end_inset
 
- sind gleich.
-\end_layout
-
-\begin_layout Enumerate
-Für alle Vorgänger 
+ sind gleich, und für alle Vorgänger
 \begin_inset Formula $u\in V$
 \end_inset
 
- gilt 
+ gilt
 \begin_inset Formula $\mathcal{C}\left[\tau\pi_{2}\mathfrak{A}\right]\left(\hat{\tau}u\right)=\mathcal{C}\left[\pi_{2}\mathfrak{A}\right]\left(u\right)$
 \end_inset
 
 .
-\end_layout
-
-\begin_layout Standard
-Es folgt 
-\begin_inset Formula $\mathcal{C}\left[\tau\pi_{2}\mathfrak{A}\right]\left(\hat{\tau}v\right)=\mathcal{C}\left[\pi_{2}\mathfrak{A}\right]\left(v\right)$
+ Daher folgt
+\begin_inset Formula $\mathcal{C}\left[\tau\pi_{2}\mathfrak{A}\right]\left(\hat{\tau}v\right)=\mathcal{C}\left[\pi_{2}\mathfrak{A}\right]\left(u\right)$
 \end_inset
 
 .
@@ -988,7 +876,7 @@ Es folgt
 \end_deeper
 \end_deeper
 \begin_layout Proof
-Schließlich gilt für jedes Tupel 
+Schließlich folgt für jedes beliebige Tupel
 \begin_inset Formula $\bar{a}\in A^{\mathrm{ar}\left(\mathcal{C}\right)}$
 \end_inset
 
@@ -996,7 +884,7 @@ Schließlich gilt für jedes Tupel
 \end_layout
 
 \begin_layout Proof
-\begin_inset Formula 
+\begin_inset Formula
 \begin{eqnarray*}
 \mathcal{C}\left[\pi_{1}\mathfrak{A}\right]\left(\Omega\left(\pi_{1}\bar{a}\right)\right) & = & \mathcal{C}\left[\tau\pi_{2}\mathfrak{A}\right]\left(\Omega\left(\tau\pi_{2}\bar{a}\right)\right)\\
  & = & \mathcal{C}\left[\tau\pi_{2}\mathfrak{A}\right]\left(\hat{\tau}\Omega\left(\pi_{2}\bar{a}\right)\right)\\
@@ -1008,28 +896,24 @@ Schließlich gilt für jedes Tupel
 
 \end_layout
 
-\begin_layout Proof
-Damit ist der Schaltkreis invariant.
-\end_layout
-
 \begin_layout --Separator--
 
 \end_layout
 
 \begin_layout Proof
-Als Gegenbeispiel wird der folgende Schaltkreis 
+Sei ein Schaltkreis
 \begin_inset Formula $\mathcal{C}$
 \end_inset
 
- mit 
+ mit
 \begin_inset Formula $U=\left\{ 1,2\right\} $
 \end_inset
 
- und 
+ und
 \begin_inset Formula $\mathrm{ar}\left(\mathcal{C}\right)=0$
 \end_inset
 
- angeführt:
+ wie folgt:
 \end_layout
 
 \begin_layout Proof
@@ -1169,12 +1053,13 @@ Schaltkreis
 \end_layout
 
 \begin_layout Standard
-Der Schaltkreis ist invariant, da er genau den Isomorphietyp 
+Der Schaltkreis ist offensichtlich invariant, da er genau den Isomorphietyp
+
 \begin_inset Formula $K_{2}$
 \end_inset
 
  akzeptiert.
- Er ist aber nicht symmetrisch, weil die Permutation 
+ Er ist aber nicht symmetrisch, da die Permutation
 \begin_inset Formula $\left(1,2\right)\mapsto\left(2,1\right)$
 \end_inset
 
@@ -1186,7 +1071,7 @@ Graph-Anfragen
 \end_layout
 
 \begin_layout Definition
-Eine 
+Eine
 \begin_inset Formula $\sigma$
 \end_inset
 
@@ -1194,28 +1079,28 @@ Eine
 \series bold
 -Anfrage
 \series default
- 
+
 \begin_inset Formula $q$
 \end_inset
 
- sei eine Abbildung jeder 
+ sei eine Abbildung jeder
 \begin_inset Formula $\sigma$
 \end_inset
 
--Struktur 
+-Struktur
 \begin_inset Formula $\mathfrak{A}$
 \end_inset
 
- auf eine 
+ auf eine
 \begin_inset Formula $k$
 \end_inset
 
--stellige Relation 
+-stellige Relation
 \begin_inset Formula $q\left(\mathfrak{A}\right)\subseteq A^{k}$
 \end_inset
 
 .
- Eine 
+ Eine
 \begin_inset Formula $\sigma$
 \end_inset
 
@@ -1223,19 +1108,23 @@ Eine
 \series bold
 -Eigenschaft
 \series default
- 
+
 \begin_inset Formula $S$
 \end_inset
 
- sei eine Klasse von 
+ sei eine Klasse von
 \begin_inset Formula $\sigma$
 \end_inset
 
--Strukturen und entspreche einer 0-stelligen Anfrage 
+-Strukturen und entspreche einer
+\begin_inset Formula $0$
+\end_inset
+
+-stelligen Anfrage
 \begin_inset Formula $q_{S}$
 \end_inset
 
- mit 
+ mit
 \begin_inset Formula $\mathfrak{A}\in S\Leftrightarrow q\left(\mathfrak{A}\right)=\left\{ \left\langle \right\rangle \right\} $
 \end_inset
 
@@ -1243,15 +1132,20 @@ Eine
 \end_layout
 
 \begin_layout Definition
-Per Definition sind alle 
+Jede
 \begin_inset Formula $\sigma$
 \end_inset
 
--Anfragen und 
-\begin_inset Formula $\sigma$
+-Anfrage ist invariant bezüglich Isomorphie; für je zwei isomorphe Strukturen
+
+\begin_inset Formula $\mathfrak{A}=\pi\mathfrak{B}$
 \end_inset
 
--Eigenschaften invariant bezüglich Graph-Isomorphismen.
+ gelte
+\begin_inset Formula $q\left(\mathfrak{A}\right)=\pi q\left(\mathfrak{B}\right)$
+\end_inset
+
+.
 \end_layout
 
 \begin_layout --Separator--
@@ -1259,19 +1153,19 @@ Per Definition sind alle
 \end_layout
 
 \begin_layout Definition
-Eine 
+Eine
 \begin_inset Formula $\left(\sigma,\mathbb{B}\right)$
 \end_inset
 
--Schaltkreis-Familie 
+-Schaltkreis-Familie
 \begin_inset Formula $\left(\mathcal{C}_{n}\right)_{n\in\mathbb{N}}$
 \end_inset
 
- sei eine Sequenz von Schaltkreisen mit der gleichen Stelligkeit 
+ sei eine Sequenz von Schaltkreisen mit der gleichen Stelligkeit
 \begin_inset Formula $\mathrm{ar}\left(\mathcal{C}_{n}\right)=k$
 \end_inset
 
- und den Universen 
+ und den Universen
 \begin_inset Formula $U^{\mathcal{C}_{n}}=\left\{ 1,\cdots,n\right\} $
 \end_inset
 
@@ -1279,35 +1173,35 @@ Eine
 \end_layout
 
 \begin_layout Definition
-Eine invariante 
+Eine invariante
 \begin_inset Formula $\left(\sigma,\mathbb{B}\right)$
 \end_inset
 
--Schaltkreis-Familie 
+-Schaltkreis-Familie
 \begin_inset Formula $\left(\mathcal{C}_{n}\right)_{n\in\mathbb{N}}$
 \end_inset
 
- 
+
 \series bold
 berechne
 \series default
- eine 
+ eine
 \begin_inset Formula $\sigma$
 \end_inset
 
--Anfrage 
+-Anfrage
 \begin_inset Formula $q$
 \end_inset
 
- genau dann wenn 
+ genau dann wenn
 \begin_inset Formula $\mathcal{C}_{\left|A\right|}\left[\mathfrak{A}\right]=q\left(\mathfrak{A}\right)$
 \end_inset
 
- für jede 
+ für jede
 \begin_inset Formula $\sigma$
 \end_inset
 
--Struktur 
+-Struktur
 \begin_inset Formula $\mathfrak{A}$
 \end_inset
 
@@ -1323,57 +1217,54 @@ Formel zu Schaltkreis
 \end_layout
 
 \begin_layout Lemma
-Jede 
-\begin_inset Formula $\mathrm{FO}\left[\sigma\right]$
+Jede
+\begin_inset Formula $\mathrm{FP}\left[\sigma\right]$
 \end_inset
 
--Formel 
+-Formel
 \begin_inset Formula $\varphi\left(\bar{x}\right)$
 \end_inset
 
- definiert eine 
+ definiert eine
 \begin_inset Formula $\sigma$
 \end_inset
 
--Anfrage 
+-Anfrage
 \begin_inset Formula $q$
 \end_inset
 
-, die von einer invarianten Schaltkreis-Familie 
-\begin_inset Formula $\left(\mathcal{C}_{n}\right)_{n\in\mathbb{N}}$
-\end_inset
-
- berechnet wird.
+, die von einer
 \end_layout
 
 \begin_layout Standard
-Sei 
+Sei
 \begin_inset Formula $\sigma$
 \end_inset
 
- eine relationale Signatur, und sei 
+ eine relationale Signatur, und sei
 \begin_inset Formula $\varphi\left(\bar{x}\right)$
 \end_inset
 
- eine 
+ eine
 \begin_inset Formula $m$
 \end_inset
 
--stellige 
+-stellige
 \begin_inset Formula $\mathrm{FO}\left[\sigma\right]$
 \end_inset
 
 -Formel.
+ S
 \end_layout
 
 \begin_layout Enumerate
-Sei 
+Sei
 \begin_inset Formula $\varphi$
 \end_inset
 
  o.B.d.A.
  in Pränex-Normalform:
-\begin_inset Formula 
+\begin_inset Formula
 \[
 \varphi\left(\bar{x}\right)\coloneqq Q_{1}y_{1}\cdots Q_{k}y_{k}\psi\left(\bar{x},\bar{y}\right)
 \]
@@ -1384,26 +1275,26 @@ Sei
 \end_layout
 
 \begin_layout Enumerate
-Sei 
+Sei
 \begin_inset Formula $\psi$
 \end_inset
 
  o.b.d.A.
  in Negationsnormalform.
- Sei 
+ Sei
 \begin_inset Formula $\mathcal{C}_{n}\left(\psi\right)=\left(V,E,\Sigma,\Omega,U\right)$
 \end_inset
 
- ein Schaltkreis mit Stelligkeit 
+ ein Schaltkreis mit Stelligkeit
 \begin_inset Formula $m+k$
 \end_inset
 
-, der wie folgt aus 
+, der wie folgt aus
 \begin_inset Formula $\psi$
 \end_inset
 
- entsteht: 
-\begin_inset Formula 
+ entsteht:
+\begin_inset Formula
 \begin{eqnarray*}
 \mathcal{C}_{n}\left(\bigwedge_{i=1}^{m}\psi_{i}\right) & = & \bigwedge_{i=1}^{m}\mathcal{C}_{\psi_{i}}\\
 \mathcal{C}_{n}\left(\bigvee_{i=1}^{m}\psi_{i}\right) & = & \bigvee_{i=1}^{m}\mathcal{C}_{\psi_{i}}
@@ -1411,40 +1302,40 @@ Sei
 
 \end_inset
 
-Hierbei werde für 
+Hierbei werde für
 \begin_inset Formula $\phi\in\left\{ \vee,\wedge\right\} $
 \end_inset
 
- und eine Menge von Schaltkreisen 
+ und eine Menge von Schaltkreisen
 \begin_inset Formula $X$
 \end_inset
 
- der Schaltkreis 
+ der Schaltkreis
 \begin_inset Formula $\phi\left(X\right)$
 \end_inset
 
- aus der disjunkten Vereinigung von 
+ aus der disjunkten Vereinigung von
 \begin_inset Formula $X$
 \end_inset
 
- konstruiert, in dem für jedes Tupel 
+ konstruiert, in dem für jedes Tupel
 \begin_inset Formula $\bar{z}\in U^{m+k}$
 \end_inset
 
- ein Gatter 
+ ein Gatter
 \begin_inset Formula $\Omega^{\phi\left(X\right)}\left(\bar{z}\right)=v$
 \end_inset
 
- mit der Markierung 
+ mit der Markierung
 \begin_inset Formula $\Sigma^{\phi\left(X\right)}\left(v\right)=\phi$
 \end_inset
 
- und den Eingängen 
+ und den Eingängen
 \begin_inset Formula $\left\{ \Omega^{C}\left(\bar{x}\right)\mid C\in X\right\} $
 \end_inset
 
  eingefügt wird.
- 
+
 \begin_inset Newline newline
 \end_inset
 
@@ -1452,73 +1343,73 @@ Hierbei werde für
 \end_layout
 
 \begin_layout Enumerate
-Ein Schaltkreis mit einem einzigen Literal 
+Ein Schaltkreis mit einem einzigen Literal
 \begin_inset Formula $R\bar{z}$
 \end_inset
 
  bzw.
- 
+
 \begin_inset Formula $\neg R\bar{z}$
 \end_inset
 
- besteht aus 
+ besteht aus
 \begin_inset Formula $U^{m+k}$
 \end_inset
 
- isolierten Knoten, wobei für jede Belegung 
+ isolierten Knoten, wobei für jede Belegung
 \begin_inset Formula $\beta\in\mathrm{Abb}\left(\bar{x}\bar{y},U\right)$
 \end_inset
 
- das Ausgangsgatter 
+ das Ausgangsgatter
 \begin_inset Formula $\Omega\left(\beta\left(\bar{x}\bar{y}\right)\right)=v$
 \end_inset
 
- mit dem Eingang 
+ mit dem Eingang
 \begin_inset Formula $\Sigma\left(v\right)=R\beta\left(\bar{z}\right)$
 \end_inset
 
  bzw.
- 
+
 \begin_inset Formula $\Sigma\left(v\right)=\neg R\beta\left(\bar{z}\right)$
 \end_inset
 
  markiert ist.
- 
+
 \end_layout
 
 \begin_layout Enumerate
-Für eine Formel 
+Für eine Formel
 \begin_inset Formula $\varphi'\left(\bar{x}\right)\coloneqq Qy_{1}\cdots Qy_{k}\varphi''\left(\bar{x},y_{i},\cdots,y_{k}\right)$
 \end_inset
 
- mit 
+ mit
 \begin_inset Formula $Q\in\left\{ \exists,\forall\right\} $
 \end_inset
 
- werde der Schaltkreis 
+ werde der Schaltkreis
 \begin_inset Formula $\mathcal{C}_{\varphi'}^{n}$
 \end_inset
 
- aus 
+ aus
 \begin_inset Formula $\mathcal{C}_{\varphi''}^{n}$
 \end_inset
 
- konstruiert, in dem für jedes Tupel 
+ konstruiert, in dem für jedes Tupel
 \begin_inset Formula $\bar{x}\in U^{m}$
 \end_inset
 
- ein Gatter 
+ ein Gatter
 \begin_inset Formula $\Omega^{\phi\left(X\right)}\left(\bar{x}\right)=v$
 \end_inset
 
- mit der Markierung 
+ mit der Markierung
 \begin_inset Formula $\Sigma^{\phi\left(X\right)}\left(v\right)=\begin{cases}
 \vee & \mbox{falls \ensuremath{Q=\exists}}\\
 \wedge & \mbox{sonst}
 \end{cases}$
 \end_inset
 
- und den Eingängen 
+ und den Eingängen
 \begin_inset Formula $\left\{ \Omega^{C}\left(\bar{x}\bar{y}\right)\mid\bar{y}\in U^{k}\right\} $
 \end_inset
 
